examples/errors/test_pipeline_stops_on_error.flow
file : "nonexistent.txt" -> content -> print
int : 42 -> print